styles/style.css
*, *::before, *::after {
  max-width: 55ch;
  box-sizing: border-box;
  font-family: 'Fira Sans', sans-serif;
}

html,
body,
div,
header,
nav,
main,
footer {
  max-width: none;
  padding: 0;
  margin: 0;
}

html {
  font-size: calc(82.5% + 0.5vw);
}

@media (min-width: 62.5rem) {
  html { font-size: 125%; }
}

:root {
  /* Color scheme */
  --primary-color: #b95ec2;
  --primary-light: #ffd4ff;
  --primary-dark: #74197f;

  --measure: 55ch;

  /* Space sizes */
  --s0: 0px;
  --s1: 0.25em;
  --s2: 0.5em;
  --s3: 1em;
  --s4: 2em;
  --s5: 4em;
  --s6: 8em;
  --s7: 16em;

  /* Font sizes */
  --fs0: 0.825rem;
  --fs1: 1rem;
  --fs2: 1.125rem;
  --fs3: 1.5rem;
  --fs4: 2rem;
  --fs5: 2.5rem;
}

h1 { font-size: 2.5rem; }
h2 { font-size: 2rem; }
h3 { font-size: 1.5rem; }
h4 { font-size: 1.125rem; }
blockquote { font-size: 1.5rem; }

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex-grow: 99999;
}

footer {
  background-color: lightgray;
  font-size: var(--fs0);
  width: 100vw;
  padding: var(--s3) var(--s4);
}



.measure { max-width: var(--measure); }


/*****
* Center
*****/

.center {
  box-sizing: content-box;
  margin-left: auto;
  margin-right: auto;
  max-width: var(--measure);
}

/*****
* Sidebar
*****/

.with-sidebar {
  overflow: hidden;
}

.with-sidebar > * {
  display: flex;
  flex-wrap: wrap;
  margin: calc(var(--s3) / 2 * -1);
}

.with-sidebar > * > * {
  padding: calc(var(--s3) / 2);
  flex-grow: 1;
  background-color: var(--primary-color);
}

.with-sidebar > * > :last-child {
  flex-basis: 0;
  flex-grow: 999;
  min-width: calc(60% - var(--s3));
  background-color: var(--primary-light);
}

/*****
* Switcher
*****/

.switcher > * {
  display: flex;
  flex-wrap: wrap;
  margin: calc((var(--s3) / 2) * -1);
}

.switcher > * > * {
  flex-grow: 1;
  flex-basis: calc((calc(var(--measure) / 2) - (100% - var(--s3))) * 999);
  margin: calc(var(--s3) / 2);
}

